0.10
 - Fix doc in ERRORS section.

0.09 2022-07-07T12:01:25+02:00
 - Skip undefined value in check_number().

0.08 2022-06-29T19:10:33+02:00
 - Add support for test of errors structure.
 - Fix error value in case of instance of object.
 - Fix bless in mock objects in tests.
 - Improve error in check_isa() like check blessed().
 - Improve error in check_isa() to not present 'Reference' if ref $value eq
   ''.

0.07 2022-02-27T12:38:59+01:00
 - Improve errors.
 - Skip undefined value in check_isa().

0.06 2022-01-15T15:58:52+01:00
 - Add check_array().
 - Add check_bool().
 - Update copyright years.

0.05 2021-10-19T13:07:37+02:00
 - Fix existing of key in check_length().
 - Fix undefined value in check_length().

0.04 2021-10-19T12:59:57+02:00
 - Add check_length().
 - Add example for check_number_of_items().
 - Add test for check_isa(). Testing of another object.
 - Improve description for check_number_of_items().

0.03 2020-12-11T14:10:51+01:00
 - Add support for '+10' syntax of number to check_number().
 - Add support for floating numbers to check_number().

0.02 2020-12-11T12:32:57+01:00
 - Fix SYNOPSIS section in doc.
 - Fix usage of check_number() in case that not exist key.
 - check_array_object() rewrite to readable version.

0.01 2020-12-11T10:20:27+01:00
 - First version.