@@ -5,6 +5,8 @@ examples/ex11.pl
 examples/ex12.pl
 examples/ex13.pl
 examples/ex14.pl
+examples/ex15.pl
+examples/ex16.pl
 examples/ex2.pl
 examples/ex3.pl
 examples/ex4.pl
