@@ -3,18 +3,40 @@
 use strict;
 use warnings;
 
-use Error::Pure;
-use Mo::utils qw(check_required);
+use Test::MockObject;
 
 $Error::Pure::TYPE = 'Error';
 
-my $self = {
-        'key' => undef,
-};
-check_required($self, 'key');
+use Mo::utils qw(check_number_of_items);
+
+# Item object #1.
+my $item1 = Test::MockObject->new;
+$item1->mock('value', sub {
+	return 'value1',
+});
+
+# Item object #2.
+my $item2 = Test::MockObject->new;
+$item2->mock('value', sub {
+	return 'value1',
+});
+
+# Tested object.
+my $self = Test::MockObject->new({
+	'key' => [],
+});
+$self->mock('list', sub {
+	return [
+		$item1,
+		$item2,
+	];
+});
+
+# Check number of items.
+check_number_of_items($self, 'list', 'value', 'Test', 'Item');
 
 # Print out.
 print "ok\n";
 
 # Output like:
-# #Error [...utils.pm:?] Parameter 'key' is required.
+# #Error [...utils.pm:?] Test for Item 'value1' has multiple values.
