@@ -5,15 +5,15 @@ use warnings;
 
 $Error::Pure::TYPE = 'Error';
 
-use Mo::utils qw(check_length);
+use Mo::utils qw(check_isa);
 
 my $self = {
         'key' => 'foo',
 };
-check_length($self, 'key', 2);
+check_isa($self, 'key', 'Test::MockObject');
 
 # Print out.
 print "ok\n";
 
 # Output like:
-# #Error [...utils.pm:?] Parameter 'key' has length greater than '2'.
+# #Error [...utils.pm:?] Parameter 'key' must be a 'Test::MockObject' object.
